--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -7,43 +7,7 @@ on:
 
 jobs:
   branch-name:
-    name: Validate Branch Name
-    runs-on: ubuntu-latest
-    steps:
-      - name: Validate branch name
-        run: |
-          BRANCH="${{ github.head_ref }}"
-          PATTERN="^(feat|fix|docs|style|refactor|perf|test|build|ci|chore|revert)/.+$"
-
-          if [[ ! "$BRANCH" =~ $PATTERN ]]; then
-            echo "Invalid branch name: $BRANCH"
-            echo ""
-            echo "Branch name must follow the pattern: type/description"
-            echo "  Examples: feat/add-login, fix/bug-123, docs/readme"
-            echo ""
-            echo "Valid types: feat, fix, docs, style, refactor, perf, test, build, ci, chore, revert"
-            exit 1
-          fi
-
-          echo "Branch name is valid: $BRANCH"
+    uses: nullplatform/actions-nullplatform-terraform/.github/workflows/branch-validation.yml@main
 
   commitlint:
-    name: Validate Commits
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '22'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Validate commits
-        run: npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
+    uses: nullplatform/actions-nullplatform-terraform/.github/workflows/conventional-commit.yml@main
