--- a/.github/workflows/readme-generator.yml
+++ b/.github/workflows/readme-generator.yml
@@ -6,7 +6,6 @@ on:
       - main
     paths:
       - '**/*.tf'
-      - '.github/scripts/generate-readme.js'
 
 concurrency:
   group: main-branch-push
@@ -14,101 +13,11 @@ concurrency:
 
 jobs:
   generate-readme:
-    name: Generate Module READMEs
-    runs-on: ubuntu-latest
+    uses: nullplatform/actions-nullplatform-terraform/.github/workflows/readme-ai.yml@main
     permissions:
       contents: write
       models: read
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '22'
-
-      - name: Check if generator script changed
-        id: script
-        run: |
-          if git diff --name-only HEAD~1 HEAD | grep -q '.github/scripts/generate-readme.js'; then
-            echo "changed=true" >> $GITHUB_OUTPUT
-          else
-            echo "changed=false" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Find modified modules
-        id: modules
-        run: |
-          if [ "${{ steps.script.outputs.changed }}" == "true" ]; then
-            dirs=$(find infrastructure -name "*.tf" -exec dirname {} \; | sort -u | tr '\n' ' ')
-            echo "dirs=$dirs" >> $GITHUB_OUTPUT
-            exit 0
-          fi
-
-          changed_files=$(git diff --name-only HEAD~1 HEAD -- '*.tf' || echo "")
-
-          if [ -z "$changed_files" ]; then
-            echo "dirs=" >> $GITHUB_OUTPUT
-            exit 0
-          fi
-
-          dirs=$(echo "$changed_files" | xargs -I {} dirname {} | sort -u | tr '\n' ' ')
-          echo "dirs=$dirs" >> $GITHUB_OUTPUT
-
-      - name: Generate READMEs with AI
-        if: steps.modules.outputs.dirs != ''
-        run: node .github/scripts/generate-readme.js ${{ steps.modules.outputs.dirs }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Setup OpenTofu
-        if: steps.modules.outputs.dirs != ''
-        uses: opentofu/setup-opentofu@v1
-
-      - name: Install terraform-docs
-        if: steps.modules.outputs.dirs != ''
-        run: |
-          cd /tmp
-          curl -sSLo terraform-docs.tar.gz https://terraform-docs.io/dl/v0.18.0/terraform-docs-v0.18.0-linux-amd64.tar.gz
-          tar -xzf terraform-docs.tar.gz
-          chmod +x terraform-docs
-          sudo mv terraform-docs /usr/local/bin/
-
-      - name: Update terraform-docs sections
-        if: steps.modules.outputs.dirs != ''
-        run: |
-          for dir in ${{ steps.modules.outputs.dirs }}; do
-            if [ -f "$dir/README.md" ]; then
-              terraform-docs markdown table "$dir" --output-file README.md --output-mode inject
-            fi
-          done
-
-      - name: Commit and push
-        if: steps.modules.outputs.dirs != ''
-        run: |
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
-
-          for dir in ${{ steps.modules.outputs.dirs }}; do
-            if [ -f "$dir/README.md" ]; then
-              git add "$dir/README.md"
-            fi
-          done
-
-          if [ -f "README.md" ]; then
-            git add README.md
-          fi
-
-          if git diff --staged --quiet; then
-            echo "No changes to commit"
-          else
-            git commit -m "docs: update module READMEs [skip ci]"
-            git pull --rebase origin main
-            git push
-          fi
-        env:
-          HUSKY: 0
+    with:
+      modules_base_dir: 'infrastructure'
+      generate_all: false
+      ai_model: 'gpt-4o'
