--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -9,74 +9,12 @@ on:
 
 jobs:
   tfsec:
-    name: tfsec Security Scan
-    runs-on: ubuntu-latest
+    uses: nullplatform/actions-nullplatform-terraform/.github/workflows/tfsec.yml@main
     permissions:
       contents: read
       pull-requests: write
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Find modified modules
-        id: modules
-        run: |
-          # Get changed .tf files in this PR
-          CHANGED_FILES=$(gh pr diff ${{ github.event.pull_request.number }} --name-only | grep '\.tf$' || echo "")
-
-          if [ -z "$CHANGED_FILES" ]; then
-            echo "No .tf files changed"
-            echo "dirs=" >> $GITHUB_OUTPUT
-            exit 0
-          fi
-
-          # Extract unique module directories
-          DIRS=$(echo "$CHANGED_FILES" | xargs -I {} dirname {} | sort -u | tr '\n' ' ')
-          echo "Modified module directories: $DIRS"
-          echo "dirs=$DIRS" >> $GITHUB_OUTPUT
-        env:
-          GH_TOKEN: ${{ github.token }}
-
-      - name: Install tfsec
-        if: steps.modules.outputs.dirs != ''
-        run: |
-          curl -s https://raw.githubusercontent.com/aquasecurity/tfsec/master/scripts/install_linux.sh | bash
-          tfsec --version
-
-      - name: Run tfsec
-        if: steps.modules.outputs.dirs != ''
-        run: |
-          for dir in ${{ steps.modules.outputs.dirs }}; do
-            echo "Scanning $dir..."
-            tfsec "$dir" --format lovely --minimum-severity HIGH
-          done
-
-      - name: Run tfsec with SARIF output
-        if: steps.modules.outputs.dirs != '' && always()
-        run: |
-          for dir in ${{ steps.modules.outputs.dirs }}; do
-            tfsec "$dir" --format sarif --soft-fail --out "results-$(basename $dir).sarif"
-          done
-          # Merge SARIF files if multiple
-          if ls results-*.sarif 1>/dev/null 2>&1; then
-            cat results-*.sarif | jq -s '.[0].runs = [.[].runs[]] | .[0]' > results.sarif
-          fi
-
-      - name: Upload SARIF file
-        if: steps.modules.outputs.dirs != '' && always()
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: results.sarif
-        continue-on-error: true
-
-      - name: Post summary comment
-        if: steps.modules.outputs.dirs != '' && failure()
-        uses: actions/github-script@v7
-        with:
-          script: |
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: '## Security Scan Failed\n\ntfsec found security issues with **HIGH** or **CRITICAL** severity.\n\nPlease review the workflow logs and fix the issues before merging.\n\n[View Details](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})'
-            })
+      security-events: write
+    with:
+      minimum_severity: 'HIGH'
+      upload_sarif: true
+      post_comment: true
